--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -4,3 +4,19 @@
 
 @import  'base/base';
 @import 'base/utilities';
+
+
+@import 'components/notfound';
+
+
+@import 'layout/grid';
+
+
+
+@import 'pages/about';
+@import  'pages/contact';
+@import 'pages/home';
+@import  'pages/about';
+@import 'pages/listingdetail';
+@import 'pages/listings';
+
